--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,15 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+ul.count-per-page {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+ul.count-per-page > li{
+  float: left;
+  margin: 10px 5px;
+}
