--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
 
-ul.count-per-page {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
+.tracklist-container {
+  margin-top:50px;
 }
-ul.count-per-page > li{
-  float: left;
-  margin: 5px 0px;
+
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+
+  border-bottom: 5px solid black;
+}
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+
+  border-top: 20px solid #f00;
 }
